css/style.css
@import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
@font-face {
  font-family: "din-regular";
  src: url("../type/DINPro-Regular.otf") format("opentype");
}
@font-face {
  font-family: "din-bold";
  src: url("../type/DINPro-Bold.otf") format("opentype");
}

/* GENERAL STYLES */
html,
body {
  font-family: "Open Sans", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}
h1,
h2 {
  font-family: "din-bold", sans-serif;
}
h1 {
  font-size: 40px;
  margin: 40px;
}

/* NAVIGATION BAR */
#navigation-bar {
  background-color: #f1c40f;
  display: block;
  padding: 12px 0;
  overflow: hidden;
  position: fixed;
  width: 100%;
  top: 0;
  text-align: right;
  font-weight: bold;
}
#name {
  float: left;
  padding-left: 20px;
  text-decoration: none;
  color: black;
}
.navigation-item {
  padding: 0 20px 0 10px;
  text-decoration: none;
  color: black;
}
.navigation-item:hover {
  text-decoration: underline;
}
.navigation-item:focus {
  background-color: white;
}
#name:hover {
  text-decoration: underline;
}
#name:focus {
  background-color: white;
}

/* INTRODUCTION SECTION */
.intro-content {
  max-width: 80vw;
  height: 100vh;
  text-align: center;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  padding-bottom: 20px;
}
.intro-image {
  margin-top: 100px;
  width: 200px;
}
.intro-text {
  width: 80%;
  padding: 20px;
  font-size: 30px;
  font-family: din-regular;
  text-align: center;
}

/* PROJECTS SECTION */
#projects-section:before {
  display: block;
  content: " ";
  margin-top: 10px;
  height: 10px;
  visibility: hidden;
  pointer-events: none;
}
#projects-section {
  background-color: #ecf0f1;
}
.projects-content {
  max-width: 80vw;
  height: 100vh;
  margin: 0 auto;
  padding-bottom: 50px;
}
#projects-grid-container {
  height: inherit;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(1, minmax(150px, auto));
}
.project {
  text-decoration: none;
  color: black;
}
.project:hover {
  text-decoration: underline;
}
.project img {
  object-fit: cover;
  width: 100%;
}

/* CONTACT SECTION */
#contact-section:before {
  display: block;
  content: " ";
  margin-top: -10px;
  height: 10px;
  visibility: hidden;
  pointer-events: none;
}
.contact-container {
  display: flex;
  width: 100vw;
  height: 40vh;
  align-items: center;
  align-content: center;
  justify-content: center;
  font-family: "din-bold";
  font-size: 40px;
}
#icon-container {
  display: flex;
  align-items: center;
  align-self: center;
  justify-content: center;
}
.contact-text {
  max-width: 80%;
  text-align: center;
}
.icon-item {
  width: 50px;
  padding: 50px;
}
.icon-item:hover {
  -webkit-transform: scale(1.5); /* Safari and Chrome */
  -moz-transform: scale(1.5); /* Firefox */
  -ms-transform: scale(1.5); /* IE 9 */
  -o-transform: scale(1.5); /* Opera */
  transform: scale(1.5);
}
.button {
  padding: 15px 25px;
  color: black;
  text-decoration: none;
}
.button:hover {
  text-decoration: underline;
}

/* FOOTER SECTION */
.site-footer {
  padding: 40px 0;
  font-size: 16px;
  margin: 0;
}
.container {
  margin: 0 auto;
  max-width: 800px;
  padding: 0px 30px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.contact-buttons {

}

/* MEDIA QUERIES */
@media only screen and (min-width: 600px) {
  /* NAVIGATION BAR */
  #navigation-bar {
    padding-right: 5px;
  }
  .navigation-item {
    padding-left: 5px;
  }
  /* INTRODUCTION SECTION */
  .intro-content {
    flex-wrap: nowrap;
  }
  .intro-text {
    font-size: 40px;
    text-align: left;
  }
  /* PROJECTS SECTION */
  .projects-content {
    max-width: 80%;
  }
  #projects-grid-container {
    grid-template-columns: repeat(2, minmax(150px, auto));
  }
  .project img {
    width: 100%;
  }
  /* CONTACT SECTION */
  .contact-container {
    text-align: center;
  }
}

@media only screen and (min-width: 900px) {
  /* PROJECTS SECTION */
  .projects-content {
    max-width: 80vw;
    height: 100vh;
    margin: 0 auto;
    padding-bottom: 160px;
  }
  #projects-grid-container {
    grid-template-columns: repeat(3, minmax(150px, auto));
  }
  h2 {
    font-size: 20px;
  }
  /* FOOTER SECTION */
  .site-footer {
    text-align: center;
  }
}

